2012-08-11  Francesco Lannutti
 * src/include/ngspice/devdefs.h
 * src/include/ngspice/smpdefs.h
 * src/spicelib/devices/asrc/asrcinit.c
 * src/spicelib/devices/bjt/bjtbindCSC.c
 * src/spicelib/devices/bjt/bjtext.h
 * src/spicelib/devices/bjt/bjtinit.c
 * src/spicelib/devices/bsim1/b1bindCSC.c
 * src/spicelib/devices/bsim1/bsim1ext.h
 * src/spicelib/devices/bsim1/bsim1init.c
 * src/spicelib/devices/bsim2/b2bindCSC.c
 * src/spicelib/devices/bsim2/bsim2ext.h
 * src/spicelib/devices/bsim2/bsim2init.c
 * src/spicelib/devices/bsim3/b3bindCSC.c
 * src/spicelib/devices/bsim3/bsim3ext.h
 * src/spicelib/devices/bsim3/bsim3init.c
 * src/spicelib/devices/bsim3soi/b4soibindCSC.c
 * src/spicelib/devices/bsim3soi/b4soiext.h
 * src/spicelib/devices/bsim3soi/b4soiinit.c
 * src/spicelib/devices/bsim3soi_dd/b3soiddbindCSC.c
 * src/spicelib/devices/bsim3soi_dd/b3soiddext.h
 * src/spicelib/devices/bsim3soi_dd/b3soiddinit.c
 * src/spicelib/devices/bsim3soi_fd/b3soifdbindCSC.c
 * src/spicelib/devices/bjt/bjtinit.c
 * src/spicelib/devices/bsim1/b1bindCSC.c
 * src/spicelib/devices/bsim1/bsim1ext.h
 * src/spicelib/devices/bsim1/bsim1init.c
 * src/spicelib/devices/bsim2/b2bindCSC.c
 * src/spicelib/devices/bsim2/bsim2ext.h
 * src/spicelib/devices/bsim2/bsim2init.c
 * src/spicelib/devices/bsim3/b3bindCSC.c
 * src/spicelib/devices/bsim3/bsim3ext.h
 * src/spicelib/devices/bsim3/bsim3init.c
 * src/spicelib/devices/bsim3soi/b4soibindCSC.c
 * src/spicelib/devices/bsim3soi/b4soiext.h
 * src/spicelib/devices/bsim3soi/b4soiinit.c
 * src/spicelib/devices/bsim3soi_dd/b3soiddbindCSC.c
 * src/spicelib/devices/bsim3soi_dd/b3soiddext.h
 * src/spicelib/devices/bsim3soi_dd/b3soiddinit.c
 * src/spicelib/devices/bsim3soi_fd/b3soifdbindCSC.c
 * src/spicelib/devices/bsim3soi_fd/b3soifdext.h
 * src/spicelib/devices/bsim3soi_fd/b3soifdinit.c
 * src/spicelib/devices/bsim3soi_pd/b3soipdbindCSC.c
 * src/spicelib/devices/bsim3soi_pd/b3soipdext.h
 * src/spicelib/devices/bsim3soi_pd/b3soipdinit.c