@@ -1,3 +1,10 @@
+2012-08-25  Francesco Lannutti
+ * src/maths/KLU/klusmp.c
+ * src/spicelib/analysis/cktsetup.c
+  Reviewed a bit the way to measure
+   the size of the Matrix and the
+   size of the Number of Non-Zeroes
+
 2012-08-11  Francesco Lannutti
  * src/include/ngspice/devdefs.h
  * src/include/ngspice/smpdefs.h
